--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
   <html>
         <head>
-            <title> hello world title
-            </title>
+            <title>hello world title</title>
         </head>
         <body>
           this is hello world body! hello again ! third time
+          <h1>this is larget heading</h1>
+          <img src="dog.webp">
         </body>
 </html>
