--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,9 @@
   <html>
         <head>
             <title>hello world title</title>
+          <style>
+            h1 { 
+            </style>
         </head>
         <body>
           this is hello world body! hello again ! third time
