--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,10 @@
         <head>
             <title>hello world title</title>
           <style>
-            h1 { 
+            h1 {
+              alignContent="center"
+              color: red;
+              }
             </style>
         </head>
         <body>
