--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
             <title>hello world title</title>
           <style>
             h1 {
+              align-items: center;
               color: red;
               }
             </style>
