--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,9 @@
             <title>hello world title</title>
           <style>
             h1 {
-              align-items: center;
+              text-aling: center;
               color: red;
+              
               }
             </style>
         </head>
