--- a/hello.html
+++ b/hello.html
@@ -2,16 +2,10 @@
   <html>
         <head>
             <title>hello world title</title>
-          <style>
-            h1{
-              text-aling: center;
-              color: red;
-               }
-            </style>
         </head>
         <body>
           this is hello world body! hello again ! third time
-          <h1>this is larget heading</h1>
+          <h1 style= "text-aling: center; color: red;">this is larget heading</h1>
           <img src="dog.webp">
         </body>
 </html>
