--- a/hello.html
+++ b/hello.html
@@ -2,12 +2,7 @@
   <html>
         <head>
             <title>hello world title</title>
-          <style>
-            h1 {
-              alignContent="center"
-              color: red;
-              }
-            </style>
+        <link rel="stylesheet" type="text/css" href="style.css">
         </head>
         <body>
           this is hello world body! hello again ! third time
