--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
         <head>
-            <title>hello world title</title>
+            <title font-size: 15px; color: blue; background-color: yello;>How to hack everythings</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         </head>
         <body>
