--- a/hello.html
+++ b/hello.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
   <html>
         <head>
-            <title> How to hack everythings (This is title) </title>
+            <title> How to hack everythings with TAJ (This is title) </title>
         <link rel="stylesheet" type="text/css" href="style.css">
         </head>
         <body>
-          this is hello world body!
+          This is the body of the website THIS WEBSITE IS UNDER Construction
           <div>hello again ! third time </div>
-          <h1>this is larget heading</h1>
+          <h1>this is heading for my website</h1>
           <p> this is paragraph no one </p>
           <img src="dog.webp">
           <img scr="https://www.pexels.com/photo/two-yellow-labrador-retriever-puppies-1108099/">
