--- a/hello.html
+++ b/hello.html
@@ -5,9 +5,10 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         </head>
         <body>
+          <h1>Welcome to my world</h1>
           This is the body of the website THIS WEBSITE IS UNDER Construction
           <div>hello again ! third time </div>
-          <h1>this is heading for my website</h1>
+
           <p> this is paragraph no one </p>
           <img src="dog.webp">
           <img scr="https://www.pexels.com/photo/two-yellow-labrador-retriever-puppies-1108099/">
